 * language and i18n:
   * updated translations: German, Hebrew, Norwegian, Polish, Russian
 * units
   * gave names to mermaids
 * gameplay changes :
   * improved default weapon selection on player attack (patch #500)
   * attack_weight=0 disables the attack when attacking
   * defense_weight=0 disables the attack when defending
 * user interface
   * centered BFW title logo on main screen for 1024x768 (still off-center for
     800x600)
   * prevent icons in themes from being scaled up (only scaling downis
     allowed)
   * fix menu capitalization consistency (#4972)
   * reduce scrolling during unit movement
 * WML improvements
   * game is not limited to melee and ranged attacks anymore, retaliation will
     use any attack of the same range. Official name for current ranges are
     "melee" and "ranged"
   * starting_villages macro updated for added village types
 * Miscelleneous
   * Added anonymous data logging for single player campaigns, see
   stats.wesnoth.org
   * Support for zipios++ can now be disabled by passing --without-zipios
   to configure - no need to de/re-install it anymore.

Version 1.1:
 * campaign server
   * support new "timestamp" attribute
   * save persistent attributes in the campaign data
     * "name" is treated as directory name, so use campaign_name (#4525)
     * SECURITY: ensure file and directory names on upload match campaign name
   * support filtering on campaign_list requests: name, last update time
     (before or after), language of translation
   * campaign_list response now contains the time the request was processed
   * campaign_list response now contains information about translations
   * fixed problem with duplicate translations being saved with each upload
   * added a passphrase change function
   * deleting campaigns, campaign file is now deleted, not reduced to zero size
 * campaigns:
   * Eastern Invasion
     * fix Undead fighting each other in Weldyn Besieged (#4386)