@@ -13,6 +13,7 @@ SVN trunk (1.1+svn):
    * improved default weapon selection on player attack (patch #500)
    * attack_weight=0 disables the attack when attacking
    * defense_weight=0 disables the attack when defending
+   * attack_weight is now functionnal (#5014)
  * user interface
    * centered BFW title logo on main screen for 1024x768 (still off-center for
      800x600)
